--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -3,11 +3,10 @@
     "tasks": [
         {
             "type": "cppbuild",
-            "label": "C/C++: clang アクティブなファイルのビルド",
-            "command": "/usr/bin/clang",
+            "label": "g++: Build Active File",
+            "command": "/usr/bin/g++",
             "args": [
-                "-fcolor-diagnostics",
-                "-fansi-escape-codes",
+                "-fdiagnostics-color=always",
                 "-g",
                 "${file}",
                 "-o",
@@ -23,7 +22,7 @@
                 "kind": "build",
                 "isDefault": true
             },
-            "detail": "デバッガーによって生成されたタスク。"
+            "detail": "Build using g++"
         }
     ]
 }
