--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,7 +2,7 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "C/C++: clang++ アクティブ ファイルのビルドとデバッグ",
+            "name": "C++: Debug Active File",
             "type": "cppdbg",
             "request": "launch",
             "program": "${fileDirname}/${fileBasenameNoExtension}",
@@ -11,8 +11,8 @@
             "cwd": "${fileDirname}",
             "environment": [],
             "externalConsole": false,
-            "MIMode": "lldb",
-            "preLaunchTask": "C/C++: clang++ アクティブなファイルのビルド"
+            "MIMode": "gdb",
+            "preLaunchTask": "g++: Build Active File"
         }
     ]
 }
